Added version and release date to README.

--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+
+
+                                mper
+
+                               v0.4.0
+                            Sep 30, 2011
+
+
 =============================================================================
 INTRODUCTION
 =============================================================================
