--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+* 2012-06-27: v0.4.1 release
+ - changed default pps to 100 (was 20)
+
 * 2011-09-30: v0.4.0 release
 
 * 2009-12-15: v0.3.0 release
