--- a/README
+++ b/README
@@ -2,8 +2,8 @@
 
                                 mper
 
-                               v0.4.1
-                            Jun 27, 2012
+                               v0.4.2
+                            Apr 16, 2014
 
 
 =============================================================================
@@ -70,6 +70,13 @@ script included in the mper distribution:
 Then start up mper with the following:
 
    $ sudo /usr/local/bin/mper -D 8746 -G 192.168.0.1 -I en0
+
+
+NOTE: mper won't work properly if there is a middlebox in the path
+      that alters the IP header, especially the IP ID field.  If you're
+      seeing abnormally low response rates, then try running with -Y to
+      disable the use of IP-ID values for probe-response matching
+      when probing with ICMP.
 
 
 =============================================================================
